@@ -13,6 +13,7 @@
 
 package org.openmetadata.catalog.resources.teams;
 
+import static java.util.List.of;
 import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
 import static javax.ws.rs.core.Response.Status.CREATED;
 import static javax.ws.rs.core.Response.Status.FORBIDDEN;
@@ -21,8 +22,7 @@ import static javax.ws.rs.core.Response.Status.OK;
 import static javax.ws.rs.core.Response.Status.UNAUTHORIZED;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.openmetadata.catalog.exception.CatalogExceptionMessage.entityNotFound;
 import static org.openmetadata.catalog.security.SecurityUtil.authHeaders;
@@ -100,27 +100,90 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
 
   @Order(Integer.MAX_VALUE) // Run this test last to avoid side effects of default role creation to fail other tests.
   @Test
-  void post_userWithDefaultRole(TestInfo test) throws IOException {
+  void userDefaultRoleAssignment(TestInfo test) throws IOException {
+    // Given a global default role has been set, ...
     RoleResourceTest roleResourceTest = new RoleResourceTest();
     List<Role> roles = roleResourceTest.listEntities(Collections.emptyMap(), ADMIN_AUTH_HEADERS).getData();
     UUID nonDefaultRoleId = roles.stream().filter(role -> !role.getDefault()).findAny().orElseThrow().getId();
     UUID defaultRoleId =
-        roles.stream().filter(Role::getDefault).findAny().orElseThrow().getId(); // DataConsumer is default role.
+        roles.stream().filter(Role::getDefault).findAny().orElseThrow().getId(); // DataConsumer is global default role.
 
-    // Given a default role has been set, when a user is created without any roles, then the default role should be
-    // assigned.
-    CreateUser create = createRequest(test, 2);
-    createUserAndCheckRoles(create, Arrays.asList(defaultRoleId));
+    // ... when a user is created without any roles, then the global default role should be assigned.
+    CreateUser create = createRequest(test, 1);
+    User user1 = createUserAndCheckRoles(create, Arrays.asList(defaultRoleId));
 
-    // Given a default role has been set, when a user is created with a non default role, then the default role should
-    // be assigned along with the non default role.
-    create = createRequest(test, 3).withRoles(List.of(nonDefaultRoleId));
-    createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    // ... when a user is created with a non default role, then the global default role should be assigned along with
+    // the non default role.
+    create = createRequest(test, 2).withRoles(List.of(nonDefaultRoleId));
+    User user2 = createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
 
-    // Given a default role has been set, when a user is created with both default and non-default role, then both
-    // roles should be assigned.
-    create = createRequest(test, 4).withRoles(List.of(nonDefaultRoleId, defaultRoleId));
-    createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    // ... when a user is created with both global default and non-default role, then both roles should be assigned.
+    create = createRequest(test, 3).withRoles(List.of(nonDefaultRoleId, defaultRoleId));
+    User user3 = createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+
+    // Given the default role has changed, ...
+    UUID prevDefaultRoleId = defaultRoleId;
+    Role defaultRole = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1000), ADMIN_AUTH_HEADERS);
+    String defaultRoleJson = JsonUtils.pojoToJson(defaultRole);
+    defaultRole.setDefault(true);
+    defaultRoleId = defaultRole.getId(); // New global default role.
+    assertNotEquals(prevDefaultRoleId, defaultRoleId);
+    roleResourceTest.patchEntity(defaultRoleId, defaultRoleJson, defaultRole, ADMIN_AUTH_HEADERS);
+
+    // ... when user1 exists, then ensure that the default role changed.
+    user1 = getEntity(user1.getId(), ADMIN_AUTH_HEADERS);
+    assertRoles(user1, Arrays.asList(defaultRoleId));
+
+    // ... when user2 exists, then ensure that the default role changed.
+    user2 = getEntity(user2.getId(), ADMIN_AUTH_HEADERS);
+    assertRoles(user2, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+
+    // ... when user3 exists, then ensure that the default role changed.
+    user3 = getEntity(user3.getId(), ADMIN_AUTH_HEADERS);
+    assertRoles(user3, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+
+    Role role1 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1001), ADMIN_AUTH_HEADERS);
+    Role role2 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1002), ADMIN_AUTH_HEADERS);
+
+    TeamResourceTest teamResourceTest = new TeamResourceTest();
+    Team team1 =
+        teamResourceTest.createEntity(
+            teamResourceTest.createRequest(test, 1).withDefaultRoles(List.of(role1.getId())), ADMIN_AUTH_HEADERS);
+    Team team2 =
+        teamResourceTest.createEntity(
+            teamResourceTest.createRequest(test, 2).withDefaultRoles(List.of(role1.getId(), role2.getId())),
+            ADMIN_AUTH_HEADERS);
+
+    // Given user1 is not part of any team and have no roles assigned, when user1 joins team1, then user1 gets assigned
+    // the global default role and the team1 default role, role1.
+    String originalUser1 = JsonUtils.pojoToJson(user1);
+    user1.setTeams(List.of(new TeamEntityInterface(team1).getEntityReference()));
+    user1 = patchUser(originalUser1, user1, ADMIN_AUTH_HEADERS);
+    assertRoles(user1, Arrays.asList(defaultRoleId, role1.getId()));
+
+    // Given user1 is part of team1, when user1 joins team2, then user1 gets assigned the global default role, the
+    // team1 default role, role1 and team2 default role, role2.
+    originalUser1 = JsonUtils.pojoToJson(user1);
+    user1.setTeams(
+        List.of(
+            new TeamEntityInterface(team1).getEntityReference(), new TeamEntityInterface(team2).getEntityReference()));
+    user1 = patchUser(originalUser1, user1, ADMIN_AUTH_HEADERS);
+    assertRoles(user1, Arrays.asList(defaultRoleId, role1.getId(), role2.getId()));
+
+    // Given user2 has a non default role assigned, when user2 joins team2, then user2 should get assigned the global
+    // default role, team2 default roles, role1 and role2, and retain its non-default role.
+    String originalUser2 = JsonUtils.pojoToJson(user2);
+    user2.setTeams(List.of(new TeamEntityInterface(team2).getEntityReference()));
+    user2 = patchUser(originalUser2, user2, ADMIN_AUTH_HEADERS);
+    assertRoles(user2, Arrays.asList(defaultRoleId, role1.getId(), role2.getId(), nonDefaultRoleId));
+
+    // Given user2 has a non default role assigned, when user2 leaves team2, then user2 should get assigned the global
+    // default role and retain its non-default role.
+    // To be fixed in https://github.com/open-metadata/OpenMetadata/issues/2969
+    //    originalUser2 = JsonUtils.pojoToJson(user2);
+    //    user2.setTeams(null);
+    //    user2 = patchUser(originalUser2, user2, ADMIN_AUTH_HEADERS);
+    //    assertRoles(user2, Arrays.asList(defaultRoleId, nonDefaultRoleId));
   }
 
   @Test
@@ -268,8 +331,8 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     TeamResourceTest teamResourceTest = new TeamResourceTest();
     Team team1 = teamResourceTest.createEntity(teamResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
     Team team2 = teamResourceTest.createEntity(teamResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS);
-    List<UUID> teams = List.of(team1.getId(), team2.getId());
-    List<UUID> team = List.of(team1.getId());
+    List<UUID> teams = of(team1.getId(), team2.getId());
+    List<UUID> team = of(team1.getId());
 
     // user0 is part of no teams
     // user1 is part of team1
@@ -475,8 +538,8 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     change = getChangeDescription(user.getVersion());
     change.getFieldsDeleted().add(new FieldChange().withName("roles").withOldValue(Arrays.asList(role1)));
     change.getFieldsAdded().add(new FieldChange().withName("roles").withNewValue(Arrays.asList(role2)));
-    change.getFieldsDeleted().add(new FieldChange().withName("teams").withOldValue(List.of(team2)));
-    change.getFieldsAdded().add(new FieldChange().withName("teams").withNewValue(List.of(team3)));
+    change.getFieldsDeleted().add(new FieldChange().withName("teams").withOldValue(of(team2)));
+    change.getFieldsAdded().add(new FieldChange().withName("teams").withNewValue(of(team3)));
     change
         .getFieldsUpdated()
         .add(new FieldChange().withName("timezone").withOldValue(timezone).withNewValue(timezone1));
@@ -551,8 +614,13 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     // TODO deactivated user can't be made owner
   }
 
-  private void createUserAndCheckRoles(CreateUser create, List<UUID> expectedRolesIds) throws HttpResponseException {
+  private User createUserAndCheckRoles(CreateUser create, List<UUID> expectedRolesIds) throws HttpResponseException {
     User user = createEntity(create, ADMIN_AUTH_HEADERS);
+    assertRoles(user, expectedRolesIds);
+    return user;
+  }
+
+  private void assertRoles(User user, List<UUID> expectedRolesIds) throws HttpResponseException {
     user = getEntity(user.getId(), ADMIN_AUTH_HEADERS);
     List<UUID> actualRolesIds =
         user.getRoles().stream().map(EntityReference::getId).sorted().collect(Collectors.toList());
@@ -574,22 +642,19 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
 
   @Override
   public void validateGetWithDifferentFields(User user, boolean byName) throws HttpResponseException {
-    // .../teams?fields=profile
-    String fields = "profile";
+    String fields = "";
     user =
         byName
             ? getEntityByName(user.getName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(user.getId(), fields, ADMIN_AUTH_HEADERS);
-    assertNotNull(user.getProfile());
-    assertNull(user.getTeams());
+    assertListNull(user.getProfile(), user.getRoles(), user.getTeams(), user.getFollows(), user.getOwns());
 
-    // .../teams?fields=profile,teams
-    fields = "profile, teams";
+    fields = "profile,roles,teams,follows,owns";
     user =
         byName
             ? getEntityByName(user.getName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(user.getId(), fields, ADMIN_AUTH_HEADERS);
-    assertListNotNull(user.getProfile(), user.getTeams());
+    assertListNotNull(user.getProfile(), user.getRoles(), user.getTeams(), user.getFollows(), user.getOwns());
   }
 
   @Override
@@ -627,12 +692,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
       expectedOwnedEntities.add(new EntityReference().withId(ref.getId()).withType(Entity.TABLE));
     }
 
-    if (!expectedOwnedEntities.isEmpty()) {
-      assertEquals(expectedOwnedEntities.size(), userAfterDeletion.getOwns().size());
-      for (EntityReference ref : expectedOwnedEntities) {
-        TestUtils.existsInEntityReferenceList(userAfterDeletion.getOwns(), ref.getId(), true);
-      }
-    }
+    TestUtils.assertEntityReferenceList(expectedOwnedEntities, userAfterDeletion.getOwns());
   }
 
   @Override
@@ -650,11 +710,11 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     for (UUID roleId : Optional.ofNullable(createRequest.getRoles()).orElse(Collections.emptyList())) {
       expectedRoles.add(new EntityReference().withId(roleId).withType(Entity.ROLE));
     }
-    if (!expectedRoles.isEmpty()) {
-      assertEquals(expectedRoles.size(), user.getRoles().size());
-      for (EntityReference role : expectedRoles) {
-        TestUtils.existsInEntityReferenceList(user.getRoles(), role.getId(), true);
-      }
+    if (expectedRoles.isEmpty()) {
+      // Default role of data consumer is added when roles are not assigned to a user during create
+      TestUtils.assertEntityReferenceList(List.of(DATA_CONSUMER_ROLE_REFERENCE), user.getRoles());
+    } else {
+      TestUtils.assertEntityReferenceList(expectedRoles, user.getRoles());
     }
 
     List<EntityReference> expectedTeams = new ArrayList<>();
@@ -665,11 +725,6 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     if (createRequest.getProfile() != null) {
       assertEquals(createRequest.getProfile(), user.getProfile());
     }
-  }
-
-  @Override
-  public void validateUpdatedEntity(User user, CreateUser request, Map<String, String> authHeaders) {
-    validateCreatedEntity(user, request, authHeaders);
   }
 
   @Override
